--- a/you-go-healthplan/src/styling/home.css
+++ b/you-go-healthplan/src/styling/home.css
@@ -70,54 +70,93 @@ body {
   align-items: center;
 }
 
-.boxOfInfo {
-  margin: 5% auto;
+.g-card {
+  width: 300px;
+  height: 500px;
+  margin: 5%;
+}
+.g-card .card-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transform-style: preserve-3d;
+  transition: transform 0.8s;
+}
+.g-card:hover .card-container {
+  transform: rotateY(180deg);
 }
 
-#card-nr-1 {
+.card-front-1,
+.card-back-1,
+.card-front-2,
+.card-back-2,
+.card-front-3,
+.card-back-3 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+.card-front-1 {
   background: linear-gradient(-45deg, #f403d1, #64b5f6);
-  width: 300px;
-  height: 500px;
   border-radius: 2%;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
   -moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
   -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
 }
-#card-nr-2 {
+.card-back-1 {
+  background: linear-gradient(-45deg, #64b5f6, #f403d1);
+  border-radius: 2%;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+  -moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+  -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+  transform: rotateY(180deg);
+}
+
+.card-front-2 {
   background: linear-gradient(-45deg, #f321d7, #ffec61);
-  width: 300px;
-  height: 500px;
   border-radius: 2%;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
   -moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
   -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
 }
-#card-nr-3 {
-  background: linear-gradient(-45deg, #24ff72, #9a4eff);
-  width: 300px;
-  height: 500px;
+.card-back-2 {
+  background: linear-gradient(-45deg, #ffec61, #f321d7);
   border-radius: 2%;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
   -moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
   -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+  transform: rotateY(180deg);
+}
+
+.card-front-3 {
+  background: linear-gradient(-45deg, #24ff72, #9a4eff);
+  border-radius: 2%;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+  -moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+  -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+}
+.card-back-3 {
+  background: linear-gradient(-45deg, #9a4eff, #24ff72);
+  border-radius: 2%;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+  -moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+  -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+  transform: rotateY(180deg);
 }
 .picture {
   width: 100px;
   height: 100px;
   margin: 40px;
-  position: relative;
-  left: 15%;
 }
 
 .rubrik {
-  position: relative;
-  text-align: center;
   text-transform: uppercase;
   font-family: titleFont;
 }
 
 .text {
-  text-align: center;
   font-family: lightFont;
 }
 
@@ -129,7 +168,6 @@ body {
   border: none;
   box-shadow: black 0 0 1px;
   position: relative;
-  left: 100px;
   top: 250px;
   font-family: titleFont;
 }
@@ -161,6 +199,9 @@ body {
 }
 
 #textSamarbetspartners {
+  background: linear-gradient(to right, #f403d1 20%, #64b5f6 60%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   font-size: 40px;
   text-align: center;
   text-transform: uppercase;
