--- a/you-go-healthplan/src/styling/pricing.css
+++ b/you-go-healthplan/src/styling/pricing.css
@@ -41,6 +41,7 @@ body {
 
 .employeesButtons {
   margin-bottom: 1vw;
+  display: inline-block;
 }
 
 .emp-button {
@@ -66,10 +67,9 @@ body {
 /*-- Contact button --*/
 
 #contact {
-  position: relative;
-  left: 44.5%;
   outline: none;
   text-decoration: none;
+  margin: 0 auto;
 }
 
 #nav {
@@ -78,10 +78,35 @@ body {
   padding: 10px;
   width: 10%;
   transition: all 0.5s;
+  margin: 0 auto;
 }
 
 #nav:hover {
   color: #5178a1;
+}
+
+@media only screen and (min-width: 895px) {
+  #nav {
+    width: 10%;
+  }
+}
+
+@media only screen and (max-width: 895px) {
+  #nav {
+    width: 14%;
+  }
+}
+
+@media only screen and (max-width: 647px) {
+  #nav {
+    width: 22%;
+  }
+}
+
+@media only screen and (max-width: 409px) {
+  #nav {
+    width: 25%;
+  }
 }
 
 /*-- Service description --*/
