--- a/you-go-healthplan/src/styling/blogg.css
+++ b/you-go-healthplan/src/styling/blogg.css
@@ -19,24 +19,35 @@ body {
   background-image: url(https://images.pexels.com/photos/1369476/pexels-photo-1369476.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
   background-repeat: no-repeat;
   background-size: 100%;
-  height: 100vh;
+  height: 34vw;
   position: relative;
   align-items: center;
   text-align: center;
 }
 
 #blog-header-title {
-  position: relative;
-  top: 3vw;
   color: #ffffff;
   font-size: 10vw;
   font-family: lightFont;
+  position: relative;
+  top: -3vw;
 }
 
 #blog-header-sub-title {
   font-family: lightFont;
   color: #ffffff;
-  font-size: 20px;
+  font-size: 1.3vw;
+  position: relative;
+  top: -9vw;
+}
+
+@media only screen and (max-width: 1000px) {
+  #blog-header-title {
+    font-size: 9vw;
+  }
+  #blog-header-sub-title {
+    top: -8vw;
+  }
 }
 
 /*-- Blog items --*/
@@ -44,6 +55,7 @@ body {
 #blogg-posts {
   width: 100%;
   padding: 2vw;
+  margin: 0 auto;
 }
 
 /*-- In post items --*/
@@ -57,10 +69,10 @@ body {
 #post {
   font-family: lightFont;
   display: flex;
-  width: 80vw;
-  margin: 2vw auto;
+  width: 75vw;
+  margin: 4vw auto;
   margin-bottom: 1vw;
-  margin-top: -4.2vw;
+  margin-top: 0.5vw;
 }
 
 #post-image {
@@ -79,7 +91,7 @@ body {
 }
 
 #post-text {
-  font-size: 1vw;
+  font-size: 1.2vw;
   margin-left: 2vw;
   width: 50vw;
 }
@@ -97,21 +109,108 @@ body {
   margin-right: 5px;
 }
 
+@media only screen and (max-width: 1000px) {
+  #post-title {
+    font-size: 2.5vw;
+    margin-left: 2vw;
+  }
+  #post-image {
+    width: 20vw;
+    height: 20vw;
+  }
+
+  #post-date {
+    font-size: 1.5vw;
+  }
+  #post-text {
+    font-size: 1.5vw;
+    margin-left: 2vw;
+    width: 50vw;
+  }
+}
+
+@media only screen and (max-width: 850px) {
+  #post-title {
+    font-size: 3vw;
+    margin-left: 2vw;
+  }
+  #post-image {
+    width: 22vw;
+    height: 22vw;
+  }
+
+  #post-date {
+    font-size: 1.8vw;
+  }
+  #post-text {
+    font-size: 2vw;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  #post-title {
+    font-size: 3.5vw;
+  }
+
+  #post-date {
+    font-size: 2vw;
+  }
+  #post-text {
+    font-size: 2.5vw;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  #post {
+    display: block;
+    width: 65vw;
+  }
+  #post-title {
+    font-size: 5vw;
+  }
+  #post-image {
+    width: 60vw;
+    height: 40vw;
+  }
+
+  #post-date {
+    font-size: 2.5vw;
+  }
+  #post-text {
+    font-size: 3vw;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  #post-title {
+    font-size: 6vw;
+  }
+
+  #post-date {
+    font-size: 3vw;
+  }
+  #post-text {
+    font-size: 3.5vw;
+  }
+}
+
 /*______Button animation_______*/
 
 .post-back-button {
   border-radius: 4px;
-  background-color: #97bb90;
+  background-color: #4b93c4;
   border: none;
   color: #ffffff;
   text-align: center;
   font-size: 1vw;
   font-family: lightFont;
   padding: 1vw;
-  width: 7vw;
+  width: 8vw;
+  height: 4vw;
   transition: all 0.5s;
   cursor: pointer;
   margin: 1vw;
+  margin-left: 2vw;
   margin-top: 2vw;
   outline: none;
 }
@@ -139,4 +238,35 @@ body {
 .post-back-button:hover span:after {
   opacity: 1;
   left: 0;
+}
+
+@media only screen and (max-width: 1000px) {
+  .post-back-button {
+    width: 9vw;
+    font-size: 1.6vw;
+  }
+}
+
+@media only screen and (max-width: 850px) {
+  .post-back-button {
+    width: 10vw;
+    height: 5vw;
+    font-size: 2.1vw;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  .post-back-button {
+    width: 11vw;
+    height: 6vw;
+    font-size: 2.5vw;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .post-back-button {
+    width: 15vw;
+    height: 7vw;
+    font-size: 3vw;
+  }
 }
