--- a/you-go-healthplan/src/styling/contact.css
+++ b/you-go-healthplan/src/styling/contact.css
@@ -147,3 +147,180 @@ body {
 .form-style-8 input[type="submit"]:hover {
   background-color: #e2887e;
 }
+
+#form-title {
+  font-size: 2vw;
+  margin-bottom: 2vw;
+}
+
+@media only screen and (max-width: 1300px) {
+  #contact-header-title {
+    font-size: 4vw;
+  }
+  #contact-header-p {
+    font-size: 1.3vw;
+  }
+  .adress-pic-info {
+    height: 28vw;
+  }
+  .agress-img {
+    width: 30vw;
+  }
+  #adress-info {
+    height: 23vw;
+    font-size: 1.6vw;
+    padding: 1vw 2vw 0 2vw;
+  }
+  .form-style-8 input[type="submit"] {
+    width: 7vw;
+    height: 3vw;
+    font-size: 1.2vw;
+  }
+}
+
+@media only screen and (max-width: 950px) {
+  .contact-content {
+    display: block;
+    align-items: center;
+    margin: 2vw;
+  }
+  #contact-header-title {
+    font-size: 5vw;
+    margin-bottom: -0.5vw;
+  }
+  #contact-header-p {
+    font-size: 1.6vw;
+  }
+  .adress-pic-info {
+    height: 33vw;
+    width: 70vw;
+    margin-top: 4vw;
+    margin-bottom: 4vw;
+  }
+  .agress-img {
+    width: 40vw;
+  }
+  #adress-info {
+    height: 23vw;
+    font-size: 1.9vw;
+  }
+  .form-style-8 {
+    width: 45vw;
+  }
+  #form-title {
+    font-size: 2.8vw;
+  }
+  .form-style-8 input[type="submit"] {
+    width: 10vw;
+    height: 4vw;
+    font-size: 1.6vw;
+  }
+}
+
+@media only screen and (max-width: 730px) {
+  #contact-header-title {
+    font-size: 7vw;
+    margin-bottom: -0.5vw;
+  }
+  #contact-header-p {
+    font-size: 2.1vw;
+  }
+  .adress-pic-info {
+    height: 40vw;
+    width: 80vw;
+    margin-top: 4vw;
+    margin-bottom: 4vw;
+  }
+  .agress-img {
+    width: 45vw;
+  }
+  #adress-info {
+    height: 23vw;
+    font-size: 2.2vw;
+  }
+  .form-style-8 {
+    width: 52vw;
+  }
+  #form-title {
+    font-size: 3vw;
+    margin-bottom: 3vw;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  #contact-header-title {
+    font-size: 8vw;
+    margin-bottom: -0.5vw;
+  }
+  #contact-header-p {
+    font-size: 2.5vw;
+  }
+  .adress-pic-info {
+    width: 61vw;
+    padding: 0 0 2vw 2vw;
+  }
+  .agress-img {
+    width: 0vw;
+  }
+  #adress-info {
+    font-size: 2.8vw;
+  }
+  .form-style-8 {
+    width: 59vw;
+  }
+  #form-title {
+    font-size: 3vw;
+    margin-bottom: 3vw;
+  }
+}
+@media only screen and (max-width: 450px) {
+  .adress-pic-info {
+    width: 80vw;
+    padding: 0 0 2vw 2vw;
+    height: 48vw;
+  }
+  .form-style-8 {
+    width: 78vw;
+  }
+  #contact-header-p {
+    font-size: 3vw;
+  }
+  #adress-info {
+    font-size: 3.4vw;
+  }
+  .form-style-8 input[type="submit"] {
+    width: 18vw;
+    height: 7vw;
+    font-size: 3vw;
+  }
+  #form-title {
+    font-size: 4.4vw;
+    margin-bottom: 3.5vw;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .adress-pic-info {
+    width: 80vw;
+    height: 50vw;
+    padding: 0 0 2vw 2vw;
+  }
+  .form-style-8 {
+    width: 78vw;
+  }
+  #contact-header-p {
+    font-size: 3vw;
+  }
+  #adress-info {
+    font-size: 3.5vw;
+  }
+  .form-style-8 input[type="submit"] {
+    width: 18vw;
+    height: 7vw;
+    font-size: 3vw;
+  }
+  #form-title {
+    font-size: 4.4vw;
+    margin-bottom: 3.5vw;
+  }
+}
