--- a/you-go-healthplan/src/styling/home.css
+++ b/you-go-healthplan/src/styling/home.css
@@ -73,7 +73,7 @@ body {
 .g-card {
   width: 300px;
   height: 500px;
-  margin: 5%;
+  margin: 0 auto;
 }
 .g-card .card-container {
   position: relative;
