--- a/you-go-healthplan/src/styling/postcomp.css
+++ b/you-go-healthplan/src/styling/postcomp.css
@@ -9,8 +9,8 @@
   color: black;
   display: inline-block;
   font-family: lightFont;
-  margin: 1vw 1.9vw 1vw 1.9vw;
-  width: 15.5vw;
+  margin: 0 auto;
+  margin-left: 3.5vw;
 }
 
 .cardDiv:hover {
@@ -37,4 +37,53 @@
 
 #postDateP {
   font-size: 1vw;
+}
+
+@media only screen and (max-width: 1000px) {
+  .cardDiv {
+    margin-left: 5.2vw;
+  }
+  .blogpics {
+    height: 17vw;
+    width: 17vw;
+  }
+  #postCompTitle {
+    font-size: 1.7vw;
+    margin-bottom: -0.6vw;
+  }
+  #postDateP {
+    font-size: 1.3vw;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .cardDiv {
+    margin-left: 7vw;
+  }
+  .blogpics {
+    height: 22vw;
+    width: 22vw;
+  }
+  #postCompTitle {
+    font-size: 2.2vw;
+  }
+  #postDateP {
+    font-size: 1.7vw;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  .cardDiv {
+    margin-left: 13vw;
+  }
+  .blogpics {
+    height: 30vw;
+    width: 30vw;
+  }
+  #postCompTitle {
+    font-size: 3.2vw;
+  }
+  #postDateP {
+    font-size: 2.6vw;
+  }
 }
