--- a/you-go-healthplan/src/styling/pricingboxcomp.css
+++ b/you-go-healthplan/src/styling/pricingboxcomp.css
@@ -53,3 +53,40 @@
   padding: 20px 10px 10px 10px;
   top: -1px;
 }
+
+@media only screen and (max-width: 1100px) {
+  #monthly {
+    font-size: 3vw;
+    margin-top: 1vw;
+  }
+  #title {
+    margin-bottom: -2vw;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  #monthly {
+    font-size: 5vw;
+  }
+  #title {
+    margin-bottom: -4vw;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  #monthly {
+    font-size: 7vw;
+  }
+  #title {
+    margin-bottom: -5vw;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  #monthly {
+    font-size: 9vw;
+  }
+  #title {
+    margin-bottom: -8vw;
+  }
+}
