--- a/you-go-healthplan/src/styling/blogg.css
+++ b/you-go-healthplan/src/styling/blogg.css
@@ -50,6 +50,16 @@ body {
   }
 }
 
+@media only screen and (max-width: 730px) {
+  #blog-header-title {
+    font-size: 12vw;
+  }
+  #blog-header-sub-title {
+    top: -8vw;
+    font-size: 2vw;
+  }
+}
+
 /*-- Blog items --*/
 
 #blogg-posts {
@@ -202,11 +212,11 @@ body {
   border: none;
   color: #ffffff;
   text-align: center;
-  font-size: 1vw;
+  font-size: 18px;
   font-family: lightFont;
   padding: 1vw;
-  width: 8vw;
-  height: 4vw;
+  width: 110px;
+  height: 60px;
   transition: all 0.5s;
   cursor: pointer;
   margin: 1vw;
@@ -239,7 +249,7 @@ body {
   opacity: 1;
   left: 0;
 }
-
+/*
 @media only screen and (max-width: 1000px) {
   .post-back-button {
     width: 9vw;
@@ -270,3 +280,4 @@ body {
     font-size: 3vw;
   }
 }
+*/
