--- a/you-go-healthplan/src/styling/blogg.css
+++ b/you-go-healthplan/src/styling/blogg.css
@@ -51,21 +51,42 @@ body {
 }
 
 @media only screen and (max-width: 730px) {
+  #blog-header {
+    top: -60px;
+  }
   #blog-header-title {
     font-size: 12vw;
+    top: 5vw;
   }
   #blog-header-sub-title {
-    top: -8vw;
+    top: -1vw;
     font-size: 2vw;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  #blog-header {
+    top: -60px;
+    height: 45vw;
+  }
+  #blog-header-title {
+    font-size: 15vw;
+    top: 12vw;
+  }
+  #blog-header-sub-title {
+    top: 4vw;
+    font-size: 3vw;
   }
 }
 
 /*-- Blog items --*/
 
 #blogg-posts {
-  width: 100%;
+  width: 96%;
   padding: 2vw;
   margin: 0 auto;
+  position: relative;
+  top: -20px;
 }
 
 /*-- In post items --*/
@@ -250,34 +271,10 @@ body {
   left: 0;
 }
 /*
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 730px) {
   .post-back-button {
     width: 9vw;
     font-size: 1.6vw;
-  }
-}
-
-@media only screen and (max-width: 850px) {
-  .post-back-button {
-    width: 10vw;
-    height: 5vw;
-    font-size: 2.1vw;
-  }
-}
-
-@media only screen and (max-width: 650px) {
-  .post-back-button {
-    width: 11vw;
-    height: 6vw;
-    font-size: 2.5vw;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  .post-back-button {
-    width: 15vw;
-    height: 7vw;
-    font-size: 3vw;
   }
 }
 */
