--- a/you-go-healthplan/src/styling/hoverButton.css
+++ b/you-go-healthplan/src/styling/hoverButton.css
@@ -1,10 +1,18 @@
+#hoverButton-component {
+}
+
 #hoverButton {
-  width: 4%;
-  height: 20px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: none;
+  background-color: transparent;
 }
 
 #shownMessage {
-  width: 60px;
-  height: 60px;
+  width: 100%;
   border: black solid;
+  position: relative;
+  left: 50%;
+  top: -100px;
 }
