--- a/you-go-healthplan/src/styling/carouselcomp.css
+++ b/you-go-healthplan/src/styling/carouselcomp.css
@@ -1,24 +1,50 @@
+@font-face {
+  font-family: lightFont;
+  src: url(../fonts/Louis\ George\ Cafe\ Light.ttf);
+}
+
+#carousel {
+  margin-bottom: 5vw;
+  position: relative;
+  font-family: lightFont;
+}
+
 #firstSlide {
   background: linear-gradient(to right, #f403d1, #64b5f6);
+  background-image: url(https://images.unsplash.com/photo-1545205597-3d9d02c29597?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80);
+  background-repeat: no-repeat;
+  background-position: 0px;
+  background-size: 100%;
   color: white;
-  height: 40vw;
+  height: 80vh;
 }
 
 #secondSlide {
   background: linear-gradient(to right, #64b5f6, #f321d7);
   color: white;
-  height: 40vw;
+  height: 80vh;
 }
 
 #thirdSlide {
   background: linear-gradient(to right, #f321d7, #ffec61);
-
   color: white;
-  height: 40vw;
+  height: 80vh;
 }
 
 #forthSlide {
   background: linear-gradient(to right, #ffec61, #f403d1);
   color: white;
-  height: 40vw;
+  height: 80vh;
+}
+
+#middleDiv {
+  text-align: center;
+}
+
+#middleTitle {
+  font-size: 7vw;
+}
+
+#middleSubTitle {
+  font-size: 2vw;
 }
