--- a/you-go-healthplan/src/styling/headercomp.css
+++ b/you-go-healthplan/src/styling/headercomp.css
@@ -10,6 +10,45 @@
   left: 2vw;
 }
 
+@media only screen and (max-width: 1500px) {
+  #logo {
+    width: 8.8vw;
+  }
+}
+
+@media only screen and (max-width: 1300px) {
+  #logo {
+    width: 10vw;
+  }
+}
+
+@media only screen and (max-width: 1100px) {
+  #logo {
+    width: 11.4vw;
+    left: 2vw;
+  }
+}
+@media only screen and (max-width: 1000px) {
+  #logo {
+    width: 13vw;
+    left: 2vw;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  #logo {
+    width: 12vw;
+    top: 3vw;
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  #logo {
+    width: 11vw;
+    left: 1vw;
+    top: 3.5vw;
+  }
+}
 /*-- Navlink items --*/
 
 .navLink {
