--- a/you-go-healthplan/src/styling/home.css
+++ b/you-go-healthplan/src/styling/home.css
@@ -15,11 +15,31 @@ body {
 }
 
 #headerpicture {
-  background-image: url(https://images.unsplash.com/photo-1541757088-1c919081357f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80);
+  background-image: url(https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
   background-repeat: no-repeat;
   background-size: 100%;
-  height: 50vw;
+  background-position: 0;
+  height: 100vh;
   position: relative;
+}
+#headerDiv {
+  background: linear-gradient(to right, #f403d0c5, #64b4f6c5);
+  height: 100vh;
+  text-align: center;
+  color: white;
+  font-family: lightFont;
+}
+
+#homeHeaderTitle {
+  font-size: 7vw;
+  position: relative;
+  top: 5vw;
+}
+
+#homeHeaderSubTitle {
+  font-size: 2vw;
+  position: relative;
+  top: 4vw;
 }
 
 /*-- Style for Info about YouGo --*/
