--- a/you-go-healthplan/src/styling/about.css
+++ b/you-go-healthplan/src/styling/about.css
@@ -7,15 +7,29 @@
   font-family: lightFont;
   align-items: center;
   text-align: center;
+  margin-bottom: 3vw;
+  color: black;
 }
 
 #about-header-title {
   font-family: titleFont;
   font-size: 3vw;
-  margin-bottom: 3vw;
-  background: linear-gradient(to right, #f403d1 20%, #64b5f6 60%);
+  /* background: linear-gradient(to right, #f403d1 20%, #64b5f6 60%); 
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  -webkit-text-fill-color: transparent; */
+}
+
+#about-header-hr {
+  width: 27vw;
+  height: 0.5px;
+  background-color: black;
+  border: none;
+}
+
+#about-header-sub-title {
+  font-family: lightFont;
+  font-size: 1vw;
+  margin-bottom: 4vw;
 }
 
 .rubrikAbout {
