--- a/you-go-healthplan/src/styling/pricingboxcomp.css
+++ b/you-go-healthplan/src/styling/pricingboxcomp.css
@@ -6,7 +6,7 @@
   background-color: #ffffff;
   border-radius: 4px;
   margin: 2vw;
-  width: 280px;
+  width: 260px;
   box-shadow: 0px 0px 15px rgba(66, 66, 66, 0.22);
   -moz-box-shadow: 0px 0px 15px rgba(66, 66, 66, 0.22);
   -webkit-box-shadow: 0px 0px 15px rgba(66, 66, 66, 0.22);
@@ -52,6 +52,7 @@
   position: relative;
   padding: 20px 10px 10px 10px;
   top: -1px;
+  text-align: initial;
 }
 
 @media only screen and (max-width: 1100px) {
