--- a/you-go-healthplan/src/styling/hoverButton.css
+++ b/you-go-healthplan/src/styling/hoverButton.css
@@ -1,18 +1,45 @@
-#hoverButton-component {
-}
-
 #hoverButton {
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
   border-radius: 50%;
   border: none;
   background-color: transparent;
 }
-
 #shownMessage {
-  width: 100%;
-  border: black solid;
+  padding: 1%;
+  width: 50%;
   position: relative;
-  left: 50%;
-  top: -100px;
+  top: -150px;
+  left: 45%;
+  border: none;
+  background: linear-gradient(-45deg, #f403d1, #64b5f6);
+  border-radius: 2%;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+  -moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+  -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+}
+
+@media only screen and (max-width: 1400px) {
+  #hoverButton {
+    width: 150px;
+    height: 150px;
+  }
+}
+@media only screen and (max-width: 1200px) {
+  #hoverButton {
+    width: 100px;
+    height: 100px;
+  }
+}
+@media only screen and (max-width: 900px) {
+  #hoverButton {
+    width: 80px;
+    height: 80px;
+  }
+}
+@media only screen and (max-width: 400px) {
+  #hoverButton {
+    width: 50px;
+    height: 50px;
+  }
 }
