--- a/you-go-healthplan/src/styling/hoverButton.css
+++ b/you-go-healthplan/src/styling/hoverButton.css
@@ -12,7 +12,7 @@
   top: -150px;
   left: 45%;
   border: none;
-  background: linear-gradient(-45deg, #f403d1, #64b5f6);
+  background: white;
   border-radius: 2%;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
   -moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
