--- a/you-go-healthplan/src/styling/home.css
+++ b/you-go-healthplan/src/styling/home.css
@@ -73,6 +73,9 @@ body {
 .imageStyle {
 }
 
+.infoAboutAll {
+}
+
 #imgOfSomething {
   background-image: url(https://images.unsplash.com/photo-1490818387583-1baba5e638af?ixlib=rb-1.2.1&auto=format&fit=crop&w=1862&q=80);
   width: 51%;
@@ -80,7 +83,8 @@ body {
 }
 
 #imgOfSomething1 {
-  background-image: url(https://images.unsplash.com/photo-1517849443514-73aa552d55bd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80);
+  background-image: url("../images/Lindaivattnet.jpeg");
+  object-fit: cover;
   width: 51%;
   height: 500px;
 }
