home flip card changes

--- a/you-go-healthplan/src/styling/pricing.css
+++ b/you-go-healthplan/src/styling/pricing.css
@@ -114,6 +114,11 @@ body {
   color: white;
 }
 
+.emp-button:focus {
+  background-color: #6995c5;
+  color: white;
+}
+
 #last-emp-button {
   margin-right: 0;
 }
