--- a/you-go-healthplan/src/styling/home.css
+++ b/you-go-healthplan/src/styling/home.css
@@ -104,6 +104,7 @@ body {
   height: 500px;
   margin: 0 auto;
 }
+
 .g-card .card-container {
   position: relative;
   width: 100%;
@@ -279,6 +280,11 @@ body {
   #Content-button-4 {
     padding-left: 50%;
     padding-top: 45%;
+  }
+}
+@media only screen and (max-width: 950px) {
+  .g-card {
+    margin-right: 2vw;
   }
 }
 @media only screen and (max-width: 800px) {
