--- a/you-go-healthplan/src/styling/pricingboxcomp.css
+++ b/you-go-healthplan/src/styling/pricingboxcomp.css
@@ -7,6 +7,7 @@
   border-radius: 4px;
   margin: 2vw;
   width: 260px;
+  height: 560px;
   box-shadow: 0px 0px 15px rgba(66, 66, 66, 0.22);
   -moz-box-shadow: 0px 0px 15px rgba(66, 66, 66, 0.22);
   -webkit-box-shadow: 0px 0px 15px rgba(66, 66, 66, 0.22);
@@ -17,26 +18,25 @@
 #title {
   position: relative;
   top: -25px;
-  background: linear-gradient(to left, #24ff72, #9a4eff);
-
+  background: linear-gradient(to left, #658cad, #84acce);
   color: white;
   padding: 10px 25px 0px 25px;
   border-radius: 3px;
-  margin-bottom: -1vw;
+  margin-bottom: -20px;
 }
 
 /*-- Top row -- */
 
 .top-box {
-  background: linear-gradient(to left, #24ff72, #9a4eff);
+  background: linear-gradient(to left, #658cad, #84acce);
   color: white;
   padding-bottom: 5px;
 }
 
 #monthly {
   font-size: 2.3vw;
-  margin-top: 1vw;
-  margin-bottom: 2vw;
+  margin-top: -10px;
+  margin-bottom: -5px;
 }
 
 /*-- Bottmon row -- */
