change color, add slider comp to home page

--- a/you-go-healthplan/src/styling/blogg.css
+++ b/you-go-healthplan/src/styling/blogg.css
@@ -223,7 +223,7 @@ body {
 
 .post-back-button {
   border-radius: 4px;
-  background-color: #84acce;
+  background-color: #319eaf;
   border: none;
   color: #ffffff;
   text-align: center;
@@ -276,7 +276,7 @@ body {
   width: 15vw;
   height: 6vw;
   color: white;
-  background-color: #84acce;
+  background-color: #319eaf;
   border: none;
   border-radius: 2px;
   margin: 2vw;
