--- a/you-go-healthplan/src/styling/home.css
+++ b/you-go-healthplan/src/styling/home.css
@@ -128,14 +128,14 @@ body {
   backface-visibility: hidden;
 }
 .card-front-1 {
-  background: linear-gradient(-45deg, #f403d1, #64b5f6);
+  background: linear-gradient(-45deg, #ff6b6b, #ff6b6b);
   border-radius: 2%;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
   -moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
   -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
 }
 .card-back-1 {
-  background: linear-gradient(-45deg, #64b5f6, #f403d1);
+  background: linear-gradient(-45deg, #6bab90, #6bab90);
   border-radius: 2%;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
   -moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
@@ -144,7 +144,7 @@ body {
 }
 
 .card-front-2 {
-  background: linear-gradient(-45deg, #f321d7, #ffec61);
+  background: linear-gradient(-45deg, #319eaf, #319eaf);
   border-radius: 2%;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
   -moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
@@ -160,7 +160,7 @@ body {
 }
 
 .card-front-3 {
-  background: linear-gradient(-45deg, #24ff72, #9a4eff);
+  background: linear-gradient(-45deg, #6bab90, #6bab90);
   border-radius: 2%;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
   -moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
