--- a/you-go-healthplan/src/styling/contact.css
+++ b/you-go-healthplan/src/styling/contact.css
@@ -23,7 +23,7 @@ body {
 
 #contact-header-title {
   font-family: titleFont;
-  background: linear-gradient(to right, #84acce 20%, #84acce 70%);
+  background: linear-gradient(to right, #319eaf 20%, #319eaf 70%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-size: 3vw;
@@ -31,7 +31,7 @@ body {
 
 #contact-header-p {
   font-family: lightFont;
-  color: #336245;
+  color: black;
   font-size: 1vw;
 }
 
@@ -127,10 +127,10 @@ body {
 }
 .form-style-8 input[type="button"],
 .form-style-8 input[type="submit"] {
-  -moz-box-shadow: inset 0px 1px 0px 0px #84acce;
-  -webkit-box-shadow: inset 0px 1px 0px 0px #84acce;
-  box-shadow: inset 0px 1px 0px 0px #84acce;
-  background-color: #84acce;
+  -moz-box-shadow: inset 0px 1px 0px 0px #319eaf;
+  -webkit-box-shadow: inset 0px 1px 0px 0px #319eaf;
+  box-shadow: inset 0px 1px 0px 0px #319eaf;
+  background-color: #319eaf;
   border: none;
   display: inline-block;
   cursor: pointer;
@@ -145,7 +145,7 @@ body {
 }
 .form-style-8 input[type="button"]:hover,
 .form-style-8 input[type="submit"]:hover {
-  background-color: #84acce;
+  background-color: #238999;
 }
 
 #form-title {
